# Politics_and_Py

./: README.md  main.py  setup.cfg
.github/workflows/: publish.yml
src/Politics_and_Python/: PnP.py  _PnP.py  __init__.py
