[metadata]
name = Politics_and_Py
version = 0.0.13
author = Star_Tube#1336
description = Python Handler for the PnW APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Star-Tube/Politics_and_Py
project_urls =
    Bug Tracker = https://github.com/Star-Tube/Politics_and_Py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src
